--- a/style.css
+++ b/style.css
@@ -116,18 +116,19 @@ color: #484747;
 
 table{
     border-collapse: collapse;  /*removes spacing between border */
-    width: 100%;  /*table spans full width*/
+    width: 450px;  /*table spans full width*/
+    margin: 30px 0px 0px 60px;
+    color: #484747 ;
     
 }
 table td{
-    text-align: center;
-    margin-top: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 20px 20px;
+    padding: 18px 20px;
 }
 .measurement{
     color: #753f29;
     font-weight: bold;
+    text-indent: 120px;
 }
 
 
